# ARCHITECHTURE

./: .gitignore  .gitmodules  README.md  TS_ERRORS.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-archflow.yml  build.yml
bridges/: ai_bridge.py  freecad_bridge.py  ifcopenshell_bridge.py  librecad_bridge.py  pdf_bridge.py  run_freecad.bat
docs/: platform-competitive-roadmap.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  write_icon.py
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  geom_bridge.py  lib.rs  main.rs
src/components/: AIChat.css  AIChat.tsx  AssetLibrary.css  AssetLibrary.tsx  BimPanel.tsx  LayerManager.css  LayerManager.tsx
src/lib/: adf.ts  aiPipeline.ts  assetLibrary.ts  branchGraph.ts  constraintRules.ts  designGraph.ts  keybindings.ts  livingSolver.ts  migrations.ts  systemGraph.ts
src/tabs/: DocsTab.css  DocsTab.tsx  GraphTab.tsx  KeybindingsTab.css  KeybindingsTab.tsx  PlansTab.css  PlansTab.tsx  ThreeDTab.css  ThreeDTab.tsx
